# word-game

./: Dockerfile  docker-compose.yml  package.json  pyproject.toml
.devcontainer/: devcontainer.json
config/settings/: base.py  local.py
game/models/: game.py  word_card.py
