[tool.poetry]
name = "word-game"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "word_game"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
dj-database-url = "^1.2.0"
whitenoise = "^6.3.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
